Fix navigation menu not displaying correctly on tablets (css) and remove custom walker from functions (no longer required)

--- a/css/navigation.css
+++ b/css/navigation.css
@@ -105,7 +105,7 @@ nav ul li a {
 }
 
 /* Large Screens */
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 769px) {
   nav ul {
     flex-direction: row;
     justify-content: space-between;
